@@ -135,10 +135,9 @@ BOOST_AUTO_TEST_CASE( call_on_invalid ) {
   X(obj.end());
   BOOST_CHECK_EQUAL(obj.is_array(), false);
 
-  flusspferd::property_attributes dummy;
-  X(obj.get_property_attributes("abc", dummy));
-  X(obj.get_property_attributes(std::string("abc"), dummy));
-  X(obj.get_property_attributes(flusspferd::string(), dummy));
+  X(obj.get_property_attributes("abc"));
+  X(obj.get_property_attributes(std::string("abc")));
+  X(obj.get_property_attributes(flusspferd::string()));
 
   //TODO
 #undef X
